# pySigma-pipeline-mdatp

./: .gitignore  LICENSE  README.md  pyproject.toml
sigma/backends/mdatp/: __init__.py  mdatp.py
sigma/pipelines/mdatp/: __init__.py  mdatp.py
tests/: test_backend_mdatp.py  test_pipelines_mdatp.py
