[tool.poetry]
name = "pySigma-pipeline-mdatp"
version = "0.1.0"
description = "pySigma Microsoft Defender processing pipelines"
authors = ["Alexander McDonald <alexmcdonald1124@gmail.com>"]
license = "MIT"
repository = "https://github.com/alexmcdonald1124/pySigma-pipeline-mdatp"
packages = [
    { include = "sigma" }
]

[tool.poetry.dependencies]
python = "^3.8"
pysigma = "^0.6.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
pytest-mypy = "^0.6.2"
pylint = "^2.6.0"
rope = "^0.18.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
